--- a/html/main.html
+++ b/html/main.html
@@ -7,13 +7,20 @@
     <link rel="stylesheet" type="text/css" href="..\style\main.css">
 </head>
 <body>
-    <div class="navbar">
-        <a class="active" href="#main">Főoldal</a>
-        <a href="#service">Szerviz</a>
-        <a href="#search">Kereső</a>
-        <a href="#user">Bejelentkezés/Felhasználó</a>
-        <a href="#basket">Kosár</a>
-    </div>
+    <nav class="navbar">
+        <div class="navbar-right"></div>  
+            <a href="#service">Szerviz</a>
+            <a href="#search"><img src="..\kepek\search.png" alt="Kereső"></a>
+        </div>
+        <div class="navbar-center">
+            <a class="active" href="#main">Főoldal</a>
+        </div>
+        <div class="navbar-left">
+            <a href="#user"><img src="..\kepek\user.png" alt="Kereső"></a>
+            <a href="#basket"><img src="..\kepek\cart.png" alt="Kereső"></a>
+        </div>
+    </nav>
+    
     <script src="..\script\main.js"></script>
 </body>
 </html>
