--- a/html/main.html
+++ b/html/main.html
@@ -7,20 +7,8 @@
     <link rel="stylesheet" type="text/css" href="..\style\main.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-right"></div>  
-            <a href="#service">Szerviz</a>
-            <a href="#search"><img src="..\kepek\search.png" alt="Kereső"></a>
-        </div>
-        <div class="navbar-center">
-            <a class="active" href="#main">Főoldal</a>
-        </div>
-        <div class="navbar-left">
-            <a href="#user"><img src="..\kepek\user.png" alt="Kereső"></a>
-            <a href="#basket"><img src="..\kepek\cart.png" alt="Kereső"></a>
-        </div>
-    </nav>
+    <div id="navbar-container"></div>
     
-    <script src="..\script\main.js"></script>
+    <script src="..\scripts\navbar.js"></script>
 </body>
 </html>
