--- a/main.html
+++ b/main.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Főoldal</title>
     <link rel="stylesheet" type="text/css" href="..\styles\main.css">
+    <link rel="stylesheet" type="text/css" href="..\styles\footer.css">
 </head>
 <body>
     <div id="navbar-container"></div>
-    
+
+    <div class="center-container">
+        <hr class="centered-hr">
+    </div>
+
+    <div id="footer-container"></div>
+    <script src="..\scripts\footer_navbar.js"></script>
     <script src="..\scripts\navbar.js"></script>
 </body>
 </html>
