A legtöbb oldal fájljait létrehoztam és elkészítettem az active navigációs rendszer alapjait. A főoldal alapjait befejeztem, már csak dinamikusabbá és szebbé kell alakítani.

--- a/main.html
+++ b/main.html
@@ -6,16 +6,29 @@
     <title>Főoldal</title>
     <link rel="stylesheet" type="text/css" href="..\styles\main.css">
     <link rel="stylesheet" type="text/css" href="..\styles\footer.css">
+    <link rel="stylesheet" type="text/css" href="..\styles\navbar.css">
 </head>
 <body>
     <div id="navbar-container"></div>
-
+    <div class="top-container">
+        <img src="..\pictures\pc_example.jpg" alt="PC" class="pc">
+        <div>
+        <div class="button" id="build">Építsd meg</div>
+        <p class="text">Te összeválogatod, mi megépítjük!</p>
+        </div>
+    </div>
     <div class="center-container">
         <hr class="centered-hr">
     </div>
-
+    <div class="bottom-container">
+        <img src="..\pictures\pc_example_2.jpg" alt="PC" class="pc">
+        <div>
+        <div class="button" id="buy">Vásárolj</div>
+        <p class="text">Válogass a kész számítógépeink közül!</p>
+        </div>
+    </div>
     <div id="footer-container"></div>
-    <script src="..\scripts\footer_navbar.js"></script>
     <script src="..\scripts\navbar.js"></script>
+    <script src="..\scripts\main.js"></script>
 </body>
 </html>
