--- a/pages/footer_navbar.html
+++ b/pages/footer_navbar.html
@@ -3,8 +3,8 @@
         © Lékó Szabolcs 2024
     </div>
     <div class="footer-navbar-right">
-        <a href="#review">Értékelj</a>
+        <a href="../pages/review.html" class="nav-link">Értékelj</a>
         |
-        <a href="#contact">Kontakt</a>
+        <a href="../pages/contact.html" class="nav-link">Kontakt</a>
     </div>
 </nav>
