--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -1,13 +1,13 @@
 <nav class="navbar">
     <div class="navbar-right"></div>  
-        <a href="#service">Szerviz</a>
-        <a href="#search"><img src="..\pictures\search.png" alt="Kereső" class="resize"></a>
+        <a href="../pages/service.html" class="nav-link">Szerviz</a>
+        <a href="../pages/browse.html" class="nav-link"><img src="..\pictures\search.png" alt="Kereső" class="resize"></a>
     </div>
     <div class="navbar-center">
-        <a class="active" href="#main">Főoldal</a>
+        <a href="/main.html" class="nav-link">Főoldal</a>
     </div>
     <div class="navbar-left">
-        <a href="#user"><img src="..\pictures\user.png" alt="Kereső"></a>
-        <a href="#basket"><img src="..\pictures\cart.png" alt="Kereső"></a>
+        <a href="#user" class="nav-link"><img src="..\pictures\user.png" alt="Fehasználó"></a>
+        <a href="#basket" class="nav-link"><img src="..\pictures\cart.png" alt="Kosár"></a>
     </div>
 </nav>
