Aktív oldalak rögzítése befejezve.

--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <div class="top-container">
         <img src="..\pictures\pc_example.jpg" alt="PC" class="pc">
         <div>
-        <div class="button" id="build">Építsd meg</div>
+        <div class="button" id="build" data-href="/pages/build.html">Építsd meg</div>
         <p class="text">Te összeválogatod, mi megépítjük!</p>
         </div>
     </div>
@@ -23,7 +23,7 @@
     <div class="bottom-container">
         <img src="..\pictures\pc_example_2.jpg" alt="PC" class="pc">
         <div>
-        <div class="button" id="buy">Vásárolj</div>
+        <div class="button" id="buy" data-href="/pages/browse.html">Vásárolj</div>
         <p class="text">Válogass a kész számítógépeink közül!</p>
         </div>
     </div>
