--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <div class="navbar-right"></div>  
-        <a href="../pages/service.html" class="nav-link">Szerviz</a>
-        <a href="../pages/browse.html" class="nav-link"><img src="..\pictures\search.png" alt="Kereső" class="resize"></a>
+        <a href="/pages/service.html" class="nav-link">Szerviz</a>
+        <a href="/pages/browse.html" class="nav-link"><img src="..\pictures\search.png" alt="Kereső" class="resize"></a>
     </div>
     <div class="navbar-center">
         <a href="/main.html" class="nav-link">Főoldal</a>
