--- a/pages/review.html
+++ b/pages/review.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Értékelés</title>
+    <link rel="stylesheet" type="text/css" href="..\styles\main.css">
+    <link rel="stylesheet" type="text/css" href="..\styles\footer.css">
+    <link rel="stylesheet" type="text/css" href="..\styles\navbar.css">
 </head>
 <body>
-    
+    <div id="navbar-container"></div>
+    <div id="footer-container"></div>
+    <script src="..\scripts\navbar.js"></script>
 </body>
 </html>
