Bejelentkezés, regisztráció, új jelszó megadás és elfelejtett jelszó felületek kinézete elkészült, logika hiányzik, még fejlesztésre szorul.

--- a/pages/browse.html
+++ b/pages/browse.html
@@ -12,5 +12,6 @@
     <div id="navbar-container"></div>
     <div id="footer-container"></div>
     <script src="..\scripts\navbar.js"></script>
+    <script src="..\scripts\button.js"></script>
 </body>
 </html>
