--- a/pages/forgot_password.html
+++ b/pages/forgot_password.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Szerviz</title>
-    <link rel="stylesheet" type="text/css" href="..\styles\service.css">
+    <title>Elfelejtett jelszó</title>
+    <link rel="stylesheet" type="text/css" href="..\styles\forgot.css">
     <link rel="stylesheet" type="text/css" href="..\styles\footer.css">
     <link rel="stylesheet" type="text/css" href="..\styles\navbar.css">
 </head>
 <body>
     <div id="navbar-container"></div>
     <div id="center-container">
-
+        <div id="forgot-box">
+            <p class="title">Elfelejtett a jelszavadat?</p>
+            <p class="email-txt">E-mail cím</p>
+            <input type="text" id="email" name="email" placeholder="E-mail cím">
+            <div class="button" id="send" data-href="/pages/login.html">Küldés</div>
+        </div>
     </div>
     <div id="footer-container"></div>
     <script src="..\scripts\navbar.js"></script>
+    <script src="..\scripts\forgot.js"></script>
 </body>
 </html>
