--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -7,7 +7,7 @@
         <a href="/main.html" class="nav-link">Főoldal</a>
     </div>
     <div class="navbar-left">
-        <a href="#user" class="nav-link"><img src="..\pictures\user.png" alt="Fehasználó"></a>
+        <a href="/pages/login.html" class="nav-link"><img src="..\pictures\user.png" alt="Fehasználó"></a>
         <a href="#basket" class="nav-link"><img src="..\pictures\cart.png" alt="Kosár"></a>
     </div>
 </nav>
