--- a/pages/build.html
+++ b/pages/build.html
@@ -12,5 +12,6 @@
     <div id="navbar-container"></div>
     <div id="footer-container"></div>
     <script src="..\scripts\navbar.js"></script>
+    <script src="..\scripts\button.js"></script>
 </body>
 </html>
