Kontakt, értékelések és értékelések írása felületet elkészítettem és a szerviz felületet részlegesen befejeztem, képek hiányoznak csak.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakt</title>
-    <link rel="stylesheet" type="text/css" href="..\styles\main.css">
+    <link rel="stylesheet" type="text/css" href="..\styles\contact.css">
     <link rel="stylesheet" type="text/css" href="..\styles\footer.css">
     <link rel="stylesheet" type="text/css" href="..\styles\navbar.css">
 </head>
 <body>
     <div id="navbar-container"></div>
+    <div id="center-container">
+        <div id="email-name">
+            <p id="txt1">Írj nekünk</p>
+            <p id="txt2">Ha bármilyen kérdésed, problémád vagy egyéb észrevételed van, akkor nyugodtan küldj egy üzenetet. Számukra a te véleményed a legfontosabb!</p>
+            <input placeholder="Név"></input>
+            <input placeholder="E-mail "></input>
+            <p id="txt3">Üzenet:</p>
+            <textarea placeholder="Szöveg"></textarea>
+            <div class="button" id="final_send">Küldés</div>
+        </div>
+    </div>
     <div id="footer-container"></div>
     <script src="..\scripts\navbar.js"></script>
-    <script src="..\scripts\button.js"></script>
+    <script src="..\scripts\contact.js"></script>
 </body>
 </html>
