--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -4,7 +4,7 @@
         <a href="/pages/browse.html" class="nav-link"><img src="..\pictures\search.png" alt="Kereső" class="resize"></a>
     </div>
     <div class="navbar-center">
-        <a href="/main.html" class="nav-link">Főoldal</a>
+        <a href="/main.html" class="nav-link"><img src="..\pictures\logo2.png" alt="Főoldal" class="special"></a>
     </div>
     <div class="navbar-left">
         <a href="/pages/login.html" class="nav-link"><img src="..\pictures\user.png" alt="Fehasználó"></a>
