Rendelési és pc adatainak felületének UI része elkészült. Ezen kívűl kisebb grafikai változásokat csináltam.

--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -8,6 +8,6 @@
     </div>
     <div class="navbar-left">
         <a href="/pages/login.html" class="nav-link"><img src="..\pictures\user.png" alt="Fehasználó"></a>
-        <a href="#basket" class="nav-link"><img src="..\pictures\cart.png" alt="Kosár"></a>
+        <a href="/pages/order.html" class="nav-link"><img src="..\pictures\cart.png" alt="Kosár"></a>
     </div>
 </nav>
