--- a/pages/service.html
+++ b/pages/service.html
@@ -12,6 +12,9 @@
     <div id="navbar-container"></div>
     <div id="center-container">
         <h2 class="main-txt">Nálunk szervizre és alkatrészcserére is lehetőséged van</h2>
+        <img id="shown-image" src="..\pictures\three-w-circle-1.png" alt="circles">
+        <img id="hidden-image" src="..\pictures\three-w-circle-2.png" alt="circles">
+        <img id="hidden-image2" src="..\pictures\three-w-circle-3.png" alt="circles">
         <p id="option1-txt">Válassz az opciók közül!</p>
         <p id="option2-txt">Írj üzenetet a problémádról / kérelmedről!</p>
         <p id="option3-txt">Add meg az e-mail címedet és a nevedet!</p>
