Az összes UI felületet átméreteztem kissebb monitorokra.

--- a/pages/order.html
+++ b/pages/order.html
@@ -26,7 +26,7 @@
                 <input type="text1" id="postalcode" name="postalcode" placeholder="Írányítószám">
             </div>
             <div id="payment_option">
-                <p class="txt">Fizetési mód</p>
+                <p class="txt" id="txt">Fizetési mód</p>
                 <div id="double-radio">
                     <div class="custom-radio-container">
                         <input type="radio" id="cash-radio" name="payment_method" class="custom-radio" checked>
